k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: node-app
spec:
    replicas: 2
    selector:
        matchLabels:
            app: node-app
    template:
        metadata:
            labels:
                app: node-app
        spec:
            containers:
                - name: node-app
                  image: ahmedradwann/content-simplifier:IMAGE_TAG
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          memory: '256Mi'
                          cpu: '250m'
                      limits:
                          memory: '512Mi'
                          cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
    name: node-app
spec:
    selector:
        app: node-app
    ports:
        - port: 3000
          targetPort: 3000
