k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres
spec:
    selector:
        matchLabels:
            app: postgres
    serviceName: postgres
    replicas: 2
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:14.18
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: postgres-storage
                        mountPath: /var/lib/postgresql/data
    volumeClaimTemplates:
        - metadata:
              name: postgres-storage
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
spec:
    selector:
        app: postgres
    ports:
        - port: 5432
          targetPort: 5432
