k8s/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: redis
spec:
    selector:
        matchLabels:
            app: redis
    serviceName: redis
    replicas: 1
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: redis:latest
                  ports:
                      - containerPort: 6379
                  volumeMounts:
                      - name: redis-data
                        mountPath: /data
    volumeClaimTemplates:
        - metadata:
              name: redis-data
          spec:
              accessModes: ['ReadWriteOnce']
              resources:
                  requests:
                      storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    selector:
        app: redis
    ports:
        - port: 6379
          targetPort: 6379
