k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: node-app-ingress
    labels:
        app.kubernetes.io/name: node-app-ingress
spec:
    ingressClassName: nginx
    rules:
        - host: myapp.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: node-app
                            port:
                                number: 3000
